--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Work+Sans:wght@400;500;600;700;800&display=swap");
+.text-light-gry {
+  color: #727272;
+}
 * {
   font-family: "Merriweather", serif;
   font-family: "Work Sans", sans-serif;
@@ -13,18 +16,18 @@ nav {
   align-items: center;
 }
 .nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: #131313;
 }
 nav > ul {
   display: flex;
 }
 nav li {
-    list-style: none;
-    margin-right: 30px;
-    font-weight: 500;
-    font-size: 1rem;
+  list-style: none;
+  margin-right: 30px;
+  font-weight: 500;
+  font-size: 1rem;
 }
 nav li a {
   text-decoration: none;
@@ -41,9 +44,7 @@ nav li a {
   font-size: 4rem;
   font-weight: 700px;
 }
-.banner-description {
-  color: #727272;
-}
+
 .btn-primary {
   font-size: 1.25rem;
   font-weight: 600;
@@ -51,38 +52,74 @@ nav li a {
   border-radius: 8px;
   background: #ff900e;
   padding: 20px 25px;
-  color: #FFF;
+  color: #fff;
   border: 0;
   cursor: pointer;
-
 }
 .banner img {
-    width: 100%;
-    margin-top: 20px;
+  width: 100%;
+  margin-top: 20px;
 }
 
+/* main styles */
+main {
+  max-width: 1440px;
+  margin: 70px auto;
+}
 
+/* teams style  */
+.team-container {
+  display: flex;
+  align-items: center;
+}
+.teams-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+.teams-content {
+  padding-right: 70px;
+  padding-left: 70px;
+}
+.teams-content-title {
+  font-size: 2.8rem;
+}
+.teams-content-title .quick-list {
+  color: #727272;
+  font-weight: 500;
+}
+.teams-content-title .text-features {
+  color: #ff900e;
+  font-weight: 700;
+}
 
 /* responsive media queries */
 /* mobile devices */
-@media screen and (max-width:576px){
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav,
+  .team-container {
+    flex-direction: column;
+  }
+  .teams-img-container{
+    grid-template-columns: 1fr;
+  }
+  .teams-content {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
 }
 /* tablet devices */
-@media  screen and (min-width:576px) and (max-width:960px) {
-    header{
-        padding: 50px;
-
-    }
-    nav{
-        flex-direction: column;
-    }
-    
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  header {
+    padding: 50px;
+  }
+  nav,
+  .team-container {
+    flex-direction: column;
+  }
 }
-
-
+@media screen and(m) {
+}
