--- a/styles/architect.css
+++ b/styles/architect.css
@@ -15,7 +15,7 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-.nav-title {
+.section-title {
   font-size: 2.8rem;
   font-weight: 700;
   color: #131313;
@@ -92,6 +92,69 @@ main {
   color: #ff900e;
   font-weight: 700;
 }
+/* feature section  */
+.features {
+  margin-top: 130px;
+  display: flex;
+  gap: 130px;
+   
+}
+.features .section-title{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+}
+.feature-content .card {
+padding: 30px;
+margin-bottom: 20px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+.ten-years-badge{
+    border-radius: 8px;
+    background: #ff900e;
+    color: #fff;
+    width: 342px;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+
+}
+/* facts section  */
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
+}
+.facts-card-container .card {
+  border-radius: 8px;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 40px 30px;
+}
+.facts-card-container .card-stats {
+  font-size: 2.8rem;
+  color: #424242;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.facts-card-container .card-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 5px;
+}
+.sponsors {
+  text-align: center;
+}
+.sponsors-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 40px;
+  align-items: center;
+}
+.sponsors-img-container img {
+  width: 165px;
+}
 
 /* responsive media queries */
 /* mobile devices */
@@ -100,15 +163,21 @@ main {
     padding: 20px;
   }
   nav,
-  .team-container {
+  .team-container,
+  .facts-card-container {
     flex-direction: column;
   }
-  .teams-img-container{
+  .teams-img-container {
     grid-template-columns: 1fr;
   }
-  .teams-content {
+  .teams-content,
+  .facts-card-container,
+  .sponsors-img-container {
     padding-right: 20px;
     padding-left: 20px;
+  }
+  .facts-card-container {
+    gap: 20px;
   }
 }
 /* tablet devices */
@@ -117,7 +186,9 @@ main {
     padding: 50px;
   }
   nav,
-  .team-container {
+  .team-container,
+  .facts-card-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
 }
