--- a/styles/architect.css
+++ b/styles/architect.css
@@ -110,14 +110,28 @@ margin-bottom: 20px;
   background: #fff;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
+.feature-img img{
+    height: 90%;
+    margin-left: 50px;
+
+}
 .ten-years-badge{
     border-radius: 8px;
     background: #ff900e;
     color: #fff;
     width: 342px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
 }
 .ten-years-badge h2{
     font-size: 4rem;
+    margin: 0;
+
+}
+.ten-years-badge p{
+    font-size: 1.2rem;
 
 }
 /* facts section  */
@@ -164,8 +178,18 @@ margin-bottom: 20px;
   }
   nav,
   .team-container,
-  .facts-card-container {
+  .features,
+  .facts-card-container,
+  .sponsors-img-container {
     flex-direction: column;
+  }
+  .teams-img-container{
+    width: 90%;
+    margin-left: 0;
+  }
+  .ten-years-badge{
+    position: static;
+    max-width: 300px;
   }
   .teams-img-container {
     grid-template-columns: 1fr;
@@ -191,6 +215,7 @@ margin-bottom: 20px;
   .sponsors-img-container {
     flex-direction: column;
   }
+
 }
 @media screen and(m) {
 }
